Salesforce Rest-API c# Login Auth access token and make request or query success

--- a/salesforce-rest-api-Integration-dot-net/salesforce-rest-api-Integration-dot-net.csproj
+++ b/salesforce-rest-api-Integration-dot-net/salesforce-rest-api-Integration-dot-net.csproj
@@ -6,4 +6,9 @@
     <RootNamespace>salesforce_rest_api_Integration_dot_net</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
